--- a/.github/workflows/windows-latest.yml
+++ b/.github/workflows/windows-latest.yml
@@ -2,9 +2,9 @@ name: C/C++ CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main, actions ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, actions ]
 
 jobs:
   build:
