--- a/.github/workflows/windows-latest.yml
+++ b/.github/workflows/windows-latest.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Checkout
+      name: Checkout
     - uses: xmake-io/github-action-setup-xmake@v1
       with:
         xmake-version: latest
