Try to fix compilation command issue

--- a/.github/workflows/windows-latest.yml
+++ b/.github/workflows/windows-latest.yml
@@ -18,5 +18,5 @@ jobs:
         xmake-version: latest
       name: Install xmake
     - name: Build
-      run: ./xmake -y
+      run: xmake -y
 # TODO Upload artifacts
