--- a/.github/workflows/windows-latest.yml
+++ b/.github/workflows/windows-latest.yml
@@ -23,12 +23,10 @@ jobs:
       name: Install xmake
 
     - name: Build debug
-      working-directory: .
-      run: xmake f -m debug -y
+      run: xmake f -m debug -y && xmake -y
 
     - name: Build release
-      working-directory: .
-      run: xmake f -m release -y
+      run: xmake f -m release -y && xmake -y
       
     - name: List directory
       run: dir
