Cleanup, try to shorten the hash

--- a/.github/workflows/windows-latest.yml
+++ b/.github/workflows/windows-latest.yml
@@ -13,9 +13,9 @@ jobs:
     steps:
     - uses: actions/checkout@v2
       name: Checkout
-
-    - name: Print working dir
-      run: pwd
+      
+    - name: Short SHA
+      run: echo ${{ github.sha[0:7] }}
 
     - uses: xmake-io/github-action-setup-xmake@v1
       with:
@@ -27,9 +27,6 @@ jobs:
 
     - name: Build release
       run: xmake f -m release -y && xmake -y
-      
-    - name: List directory
-      run: dir
       
     - uses: actions/upload-artifact@v2
       with:
