Run it only on main branch

--- a/.github/workflows/windows-latest.yml
+++ b/.github/workflows/windows-latest.yml
@@ -2,9 +2,9 @@ name: Utopia for Windows
 
 on:
   push:
-    branches: [ main, actions ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, actions ]
+    branches: [ main ]
 
 jobs:
   build:
