--- a/.github/workflows/windows-latest.yml
+++ b/.github/workflows/windows-latest.yml
@@ -34,12 +34,11 @@ jobs:
         mkdir debug-artifact
         move build/debug-windows-x64/SandBox/bin/SandBox.exe debug-artifact/
         move build/debug-windows-x64/SandBox/bin/SandBox.pdb debug-artifact/
-        move build/debug-windows-x64/Utopia/bin/Utopia.dll debug-artifact/
-        move build/debug-windows-x64/Utopia/bin/Utopia.pdb debug-artifact/
+        move build/debug-windows-x64/Utopia/bin/Utopia.lib debug-artifact/
         
         mkdir release-artifact
         move build/release-windows-x64/SandBox/bin/SandBox.exe release-artifact/
-        move build/release-windows-x64/Utopia/bin/Utopia.dll release-artifact/
+        move build/release-windows-x64/Utopia/bin/Utopia.lib release-artifact/
 
     - uses: actions/upload-artifact@v2
       with:
