--- a/.github/workflows/windows-latest.yml
+++ b/.github/workflows/windows-latest.yml
@@ -40,12 +40,12 @@ jobs:
 
     - uses: actions/upload-artifact@v2
       with:
-        name: Cardia-windows-debug-${{ github.run_id }}
+        name: cardia-windows-debug-${{ github.run_id }}
         path: debug-artifact/
       name: Upload debug artifact
       
     - uses: actions/upload-artifact@v2
       with:
-        name: Cardia-windows-release-${{ github.run_id }}
+        name: cardia-windows-release-${{ github.run_id }}
         path: release-artifact/
       name: Upload release artifact
