Add verbose to xmake CI

--- a/.github/workflows/windows-latest.yml
+++ b/.github/workflows/windows-latest.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Build debug
       run: |
         xmake f -m debug -y
-        xmake
+        xmake -v
 
     - name: Build release
       run: | 
