--- a/CardiaTor/resources/editorconfig.ini
+++ b/CardiaTor/resources/editorconfig.ini
@@ -3,30 +3,25 @@ Pos=0,0
 Size=2560,1369
 Collapsed=0
 
-[Window][Debug##Default]
-Pos=60,60
-Size=400,400
-Collapsed=0
-
-[Window][Files]
+[Window][Files##0]
 Pos=508,965
 Size=1345,404
 Collapsed=0
 DockId=0x00000008,0
 
-[Window][Inspector]
+[Window][Inspector##0]
 Pos=1855,22
 Size=705,1347
 Collapsed=0
 DockId=0x00000004,0
 
-[Window][Current Scene]
+[Window][Current Scene##0]
 Pos=0,22
 Size=506,939
 Collapsed=0
 DockId=0x00000005,0
 
-[Window][Debug tools]
+[Window][Debug tools##0]
 Pos=0,963
 Size=506,406
 Collapsed=0
