--- a/CardiaTor/resources/editorconfig.ini
+++ b/CardiaTor/resources/editorconfig.ini
@@ -1,29 +1,29 @@
 [Window][DockSpace]
 Pos=0,0
-Size=2560,1369
+Size=1080,720
 Collapsed=0
 
 [Window][Files##0]
-Pos=508,965
-Size=1345,404
+Pos=215,511
+Size=566,209
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Inspector##0]
-Pos=1855,22
-Size=705,1347
+Pos=783,22
+Size=297,698
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Current Scene##0]
 Pos=0,22
-Size=506,939
+Size=213,486
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][Debug tools##0]
-Pos=0,963
-Size=506,406
+Pos=0,510
+Size=213,210
 Collapsed=0
 DockId=0x00000006,0
 
@@ -34,21 +34,26 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Edit]
-Pos=508,22
-Size=1345,941
+Pos=215,22
+Size=566,487
 Collapsed=0
 DockId=0x0000000B,0
 
+[Window][Debug##Default]
+Pos=60,60
+Size=400,400
+Collapsed=0
+
 [Docking][Data]
-DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,45 Size=2560,1347 Split=X
+DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=112,157 Size=1080,698 Split=X
   DockNode        ID=0x00000003 Parent=0x09EF459F SizeRef=781,698 Split=X
     DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=213,698 Split=Y Selected=0xF5AC433B
-      DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=170,486 Selected=0xF5AC433B
-      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=170,210 Selected=0xC9987C54
+      DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=170,486 Selected=0x71309FE7
+      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=170,210 Selected=0x4BD1CD4F
     DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=566,698 Split=Y
       DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=786,487 Split=Y
         DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=689,33 HiddenTabBar=1 Selected=0x28257B55
         DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=689,452 CentralNode=1 Selected=0x21077124
-      DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=786,209 Selected=0xC7F46F5D
-  DockNode        ID=0x00000004 Parent=0x09EF459F SizeRef=297,698 Selected=0xF02CD328
+      DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=786,209 Selected=0x61EB9A2F
+  DockNode        ID=0x00000004 Parent=0x09EF459F SizeRef=297,698 Selected=0xF3A98BF1
 
