--- a/CardiaTor/resources/editorconfig.ini
+++ b/CardiaTor/resources/editorconfig.ini
@@ -1,29 +1,29 @@
 [Window][DockSpace]
 Pos=0,0
-Size=1080,720
+Size=2560,1369
 Collapsed=0
 
 [Window][Files##0]
-Pos=215,511
-Size=566,209
+Pos=0,654
+Size=470,715
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Inspector##0]
-Pos=783,22
-Size=297,698
-Collapsed=0
-DockId=0x00000004,0
-
-[Window][Current Scene##0]
-Pos=0,22
-Size=213,486
+Pos=1984,22
+Size=576,867
 Collapsed=0
 DockId=0x00000005,0
 
+[Window][Current Scene##0]
+Pos=0,22
+Size=470,630
+Collapsed=0
+DockId=0x00000004,0
+
 [Window][Debug tools##0]
-Pos=0,510
-Size=213,210
+Pos=1984,891
+Size=576,478
 Collapsed=0
 DockId=0x00000006,0
 
@@ -34,26 +34,105 @@ Collapsed=0
 DockId=0x0000000A,0
 
 [Window][Edit]
-Pos=215,22
-Size=566,487
+Pos=472,22
+Size=1510,979
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x0000000E,0
 
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][Current Scene##1]
+Pos=0,267
+Size=213,241
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Console##0]
+Pos=472,1003
+Size=1510,366
+Collapsed=0
+DockId=0x0000000F,0
+
+[Window][Files##1]
+Pos=215,512
+Size=566,208
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][Files##2]
+Pos=0,22
+Size=295,487
+Collapsed=0
+DockId=0x00000004,0
+
+[Window][Dear ImGui Demo]
+Pos=354,763
+Size=1132,317
+Collapsed=0
+DockId=0x0000000F,1
+
+[Window][DockSpace Demo]
+Size=1080,720
+Collapsed=0
+
+[Window][Example: Simple layout]
+ViewportPos=1537,348
+ViewportId=0x84B6E34D
+Size=550,680
+Collapsed=0
+DockId=0x0000000F,1
+
+[Window][Example: Property editor]
+ViewportPos=1537,348
+ViewportId=0x84B6E34D
+Size=550,680
+Collapsed=0
+DockId=0x0000000F,2
+
+[Window][Console##1]
+Pos=215,512
+Size=566,208
+Collapsed=0
+DockId=0x0000000F,1
+
+[Window][Inspector##1]
+Pos=215,512
+Size=566,208
+Collapsed=0
+DockId=0x0000000E,1
+
+[Window][Console##2]
+Pos=215,512
+Size=566,208
+Collapsed=0
+DockId=0x0000000E,1
+
+[Window][Example: Console]
+Pos=856,103
+Size=520,600
+Collapsed=0
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
 [Docking][Data]
-DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=790,655 Size=1080,698 Split=X
-  DockNode        ID=0x00000003 Parent=0x09EF459F SizeRef=781,698 Split=X
-    DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=213,698 Split=Y Selected=0xF5AC433B
-      DockNode    ID=0x00000005 Parent=0x00000001 SizeRef=170,486 Selected=0x71309FE7
-      DockNode    ID=0x00000006 Parent=0x00000001 SizeRef=170,210 Selected=0x4BD1CD4F
-    DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=566,698 Split=Y
-      DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=786,487 Split=Y
-        DockNode  ID=0x0000000A Parent=0x00000007 SizeRef=689,33 HiddenTabBar=1 Selected=0x28257B55
-        DockNode  ID=0x0000000B Parent=0x00000007 SizeRef=689,452 CentralNode=1 Selected=0x21077124
-      DockNode    ID=0x00000008 Parent=0x00000002 SizeRef=786,209 Selected=0x61EB9A2F
-  DockNode        ID=0x00000004 Parent=0x09EF459F SizeRef=297,698 Selected=0xF3A98BF1
+DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=0,45 Size=2560,1347 Split=X
+  DockNode        ID=0x00000003 Parent=0x09EF459F SizeRef=1486,698 Split=X
+    DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=352,698 Split=Y Selected=0xF5AC433B
+      DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=213,243 Split=Y Selected=0x71309FE7
+        DockNode  ID=0x00000004 Parent=0x00000009 SizeRef=470,630 Selected=0x71309FE7
+        DockNode  ID=0x00000008 Parent=0x00000009 SizeRef=470,715 Selected=0x61EB9A2F
+      DockNode    ID=0x0000000C Parent=0x00000001 SizeRef=213,241 Selected=0x0637AF71
+    DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1132,698 Split=Y
+      DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=689,33 HiddenTabBar=1 Selected=0x28257B55
+      DockNode    ID=0x0000000B Parent=0x00000002 SizeRef=689,452 Split=Y Selected=0x21077124
+        DockNode  ID=0x0000000E Parent=0x0000000B SizeRef=566,979 CentralNode=1 Selected=0x21077124
+        DockNode  ID=0x0000000F Parent=0x0000000B SizeRef=566,366 Selected=0x06DF7D19
+  DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=432,698 Split=Y Selected=0xF3A98BF1
+    DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=576,867 Selected=0xF3A98BF1
+    DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=576,478 Selected=0x4BD1CD4F
 
