--- a/CardiaTor/resources/editorconfig.ini
+++ b/CardiaTor/resources/editorconfig.ini
@@ -11,7 +11,7 @@ DockId=0x00000008,0
 
 [Window][Inspector##0]
 Pos=1534,22
-Size=386,680
+Size=386,464
 Collapsed=0
 DockId=0x00000005,0
 
@@ -22,8 +22,8 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Debug tools##0]
-Pos=1534,704
-Size=386,376
+Pos=1534,488
+Size=386,592
 Collapsed=0
 DockId=0x00000006,0
 
@@ -120,19 +120,19 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=320,365 Size=1920,1058 Split=X
+DockSpace         ID=0x09EF459F Window=0x9A404470 Pos=138,183 Size=1920,1058 Split=X
   DockNode        ID=0x00000003 Parent=0x09EF459F SizeRef=1532,698 Split=X
     DockNode      ID=0x00000001 Parent=0x00000003 SizeRef=338,698 Split=Y Selected=0xF5AC433B
       DockNode    ID=0x00000009 Parent=0x00000001 SizeRef=213,243 Split=Y Selected=0x71309FE7
-        DockNode  ID=0x00000004 Parent=0x00000009 SizeRef=470,630 Selected=0x71309FE7
-        DockNode  ID=0x00000008 Parent=0x00000009 SizeRef=470,715 Selected=0x61EB9A2F
+        DockNode  ID=0x00000004 Parent=0x00000009 SizeRef=470,630 Selected=0xCC65F64D
+        DockNode  ID=0x00000008 Parent=0x00000009 SizeRef=470,715 Selected=0x062CFEFF
       DockNode    ID=0x0000000C Parent=0x00000001 SizeRef=213,241 Selected=0x0637AF71
     DockNode      ID=0x00000002 Parent=0x00000003 SizeRef=1192,698 Split=Y
       DockNode    ID=0x0000000A Parent=0x00000002 SizeRef=689,33 HiddenTabBar=1 Selected=0x28257B55
       DockNode    ID=0x0000000B Parent=0x00000002 SizeRef=689,452 Split=Y Selected=0x21077124
-        DockNode  ID=0x0000000E Parent=0x0000000B SizeRef=566,741 CentralNode=1 Selected=0x21077124
-        DockNode  ID=0x0000000F Parent=0x0000000B SizeRef=566,315 Selected=0x06DF7D19
-  DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=386,698 Split=Y Selected=0xF3A98BF1
-    DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=283,469 Selected=0xF3A98BF1
-    DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=283,259 Selected=0x4BD1CD4F
+        DockNode  ID=0x0000000E Parent=0x0000000B SizeRef=566,741 CentralNode=1 Selected=0xF08DBBCF
+        DockNode  ID=0x0000000F Parent=0x0000000B SizeRef=566,315 Selected=0x173D98AB
+  DockNode        ID=0x00000007 Parent=0x09EF459F SizeRef=386,698 Split=Y Selected=0xAAEB2666
+    DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=386,464 Selected=0x010D26FD
+    DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=386,592 Selected=0xAAEB2666
 
